fixing tap targets too small

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -51,3 +51,10 @@
 body.details .columns.block:has(.columns-img-col) > div {
   gap: var(--spacing-6);
 }
+
+.contact-us-columns {
+  & ul li a {
+    padding-block: var(--spacing-1);
+    display: inline-block;
+  }
+}
